maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:12: error: type mismatch;
 found   : Unit
 required: Int
  for ( x <- 0 to L-1){
          ^